# rust-torrent-client

./: .gitignore  Cargo.toml  LICENSE  README.md  download
base/: Cargo.toml
base/src/: lib.rs
bt/: Cargo.toml
bt/src/: lib.rs
bt/src/base/: download.rs  ipc.rs  manager.rs  meta_info.rs  mod.rs  terminal.rs
bt/src/bencode/: decode.rs  encode.rs  hash.rs  mod.rs  value.rs
bt/src/net/: mod.rs  peer_connection.rs  tracker.rs
bt/src/peer/: peer_connection.rs
bt/src/tracker/: error.rs  mod.rs  tracker.rs  tracker_supervisor.rs  udp.rs
mytest/: Cargo.toml
mytest/src/: main.rs
src/: main.rs
src/base/: meta_info.rs  mod.rs
src/bencode/: decode.rs  hash.rs  mod.rs  value.rs
src/bt/: files_manager.rs  ipc.rs  mod.rs
src/net/: download.rs  ipc.rs  listener.rs  mod.rs  peer_connection.rs  request_queue.rs  tracker_connection.rs
tests/: io_test.rs  owner_test.rs
torrent/: ubuntu-18.04.5-desktop-amd64.iso.torrent  ubuntu-20.04.5-desktop-amd64.iso.torrent
