[package]
name = "rustorrent"
version = "0.1.0"
authors = ["wzq <1228740123@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]


[dependencies]
#base = {path = "./base"}
encoding = "0.2"
hex = {version = "0.3", default-features = false, optional = true}
bencode = "0.1"


