[package]
name = "rustorrent"
version = "0.1.0"
authors = ["wzq <1228740123@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "bt",
]

[dependencies]
#base = {path = "./base"}
encoding = "0.2"
hex = {version = "0.3", default-features = false, optional = true}
bencode = "0.1"

getopts = "0.2"
hyper = "0.10"
rand = "0.3"
rust-crypto = "0.2"
url = "0.2"

#log = "0.4.0"
#env_logger = "0.7.1"

#snafu = "0.6.6"

futures = "0.3.0"
[dependencies.async-std]
version = "1.5.0"
features = ["unstable"]