[package]
name = "bt"
version = "0.1.0"
authors = ["wzq <1228740123@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# getopts: handle terminal command
getopts = "0.2"
rand = "0.3"
rust-crypto = "0.2"
url = "0.2"
#snafu = "0.6.6"

async-h1 = "2.1.4"
http-types = "*"
hyper = "0.13"
surf = "2.1.0"

tokio = { version = "0.3", features = ["full"] }
futures = "0.3.0"

bencode = "0.1"

[dependencies.async-std]
version = "1.6.2"
features = ["unstable"]

[dev-dependencies]
tokio-test = "*"

