[package]
name = "bt"
version = "0.1.0"
authors = ["wzq <1228740123@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# getopts: handle terminal command
getopts = "0.2"
# rand
rand = "0.3"
rust-crypto = "0.2"

# surf: http service
surf = "2.1.0"
url = "0.2"

futures = "0.3.0"

bencode = "0.1"

[dependencies.async-std]
version = "1.6.2"
features = ["unstable"]

#[dev-dependencies]
#tokio-test = "*"

