[package]
name = "bt"
version = "0.1.0"
authors = ["wzq <1228740123@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# getopts: handle terminal command
getopts = "0.2.0"
# rand
rand = "0.3.0"
# crypto: sha1 algorithm
rust-crypto = "0.2.0"
# crossterm: terminal lib
crossterm = "0.19.0"
# surf: http service
surf = "2.1.0"
url = "0.2.0"
# once_cell: Lazy
once_cell = "*"
# crossbeam: Sender and Receiver are Sync !
# crossbeam = "*"
# async-channel: like crossbeam in async
async-channel = "1.5.0"

futures = "0.3.0"

[dependencies.async-std]
version = "~1.6.2"
features = ["unstable"]

#[dev-dependencies]
#tokio-test = "*"

